--- a/dynamically-switching-datasources/pom.xml
+++ b/dynamically-switching-datasources/pom.xml
@@ -55,6 +55,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-1.2-api</artifactId>
+            <version>2.16.0</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
